--- a/.github/workflows/train_pipeline.yml
+++ b/.github/workflows/train_pipeline.yml
@@ -6,74 +6,75 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  download_artifacts:
-    name: "📥 Download Candles + Metrics Artifacts"
+  train:
+    name: "🤖 Download Artifacts, Install & Train"
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.9]
+
     steps:
-      - name: "🔄 Checkout repo"
+      # 1) Code auschecken
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: "📦 Download Candlestick Artifacts"
+      # 2) Python einrichten + pip-Cache
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('train/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      # 3) Dependencies installieren
+      - name: Install training dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r train/requirements.txt
+
+      # 4) Artefakte herunterladen
+      - name: Download Candlestick Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: "history-*"
-          path: "historical_raw/"
+          name: history-*
+          path: historical_raw/
 
-      - name: "📊 Download Metrics Artifacts"
+      - name: Download Metrics Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: "metrics-*"
-          path: "metrics_raw/"
+          name: metrics-*
+          path: metrics_raw/
 
-      - name: "✅ Mark artifacts ready"
-        run: echo "ARTIFACTS_DOWNLOADED=true" >> $GITHUB_ENV
-
-  prepare_data:
-    name: "🗂️ Unzip Historical & Metrics"
-    runs-on: ubuntu-latest
-    needs: download_artifacts
-    steps:
-      - name: "🔄 Checkout repo"
-        uses: actions/checkout@v3
-
-      - name: "🔧 Unzip Candlestick-Zips"
+      # 5) Daten vorbereiten (entpacken/verschieben)
+      - name: Unzip Historical Zips
         run: |
           mkdir -p historical
           for Z in historical_raw/*.zip; do
             unzip -q "$Z" -d historical/
           done
 
-      - name: "🔧 Unzip Metrics-Zips"
+      - name: Move Metrics JSONs
         run: |
           mkdir -p metrics
-          for Z in metrics_raw/*.zip; do
-            unzip -q "$Z" -d metrics/
-          done
+          mv metrics_raw/**/*.json metrics/
 
-  train_model:
-    name: "🤖 Train & Export TFLite"
-    runs-on: ubuntu-latest
-    needs: prepare_data
-    steps:
-      - name: "🔄 Checkout repo"
-        uses: actions/checkout@v3
-
-      - name: "⚙️ Setup Python 3.10"
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: "📥 Install training dependencies"
-        run: pip install -r train/requirements.txt
-
-      - name: "▶️ Run training script"
+      # 6) Training ausführen
+      - name: Run training script
         working-directory: train
         run: python train.py
 
-      - name: "🚀 Upload model artifacts"
+      # 7) Modell-Artefakte hochladen
+      - name: Upload model artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: "model-files"
+          name: model-files
           path: |
             train/scaler.pkl
             train/model.tflite
