--- a/.github/workflows/liquidity_snapshot.yml
+++ b/.github/workflows/liquidity_snapshot.yml
@@ -1,42 +1,86 @@
 # .github/workflows/liquidity_snapshot.yml
 
-name: Daily Liquidity Snapshot
+name: 💧 Full Liquidity Snapshot & Push
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'  # 00:00 UTC täglich
+    - cron: '0 0 * * *'  # 00:00 UTC daily
 
 jobs:
-  snapshot:
+  capture_snapshots:
+    name: 💧 Capture Liquidity Snapshots for ${{ matrix.symbol }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
+      max-parallel: 6
 
     steps:
-      - name: Checkout
+      - name: 🔄 Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install jq
+      - name: 🛠️ Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Capture Futures Depth
+      - name: 📥 Capture Futures Depth
         run: |
+          DATE=$(date -I)
           mkdir -p snapshots/futures/${{ matrix.symbol }}
           curl -s "https://fapi.binance.com/fapi/v1/depth?symbol=${{ matrix.symbol }}&limit=500" \
-            | jq . > snapshots/futures/${{ matrix.symbol }}/$(date -I).json
+            | jq . > snapshots/futures/${{ matrix.symbol }}/$DATE.json
 
-      - name: Capture Spot Depth
+      - name: 📥 Capture Spot Depth
         run: |
+          DATE=$(date -I)
           mkdir -p snapshots/spot/${{ matrix.symbol }}
           curl -s "https://api.binance.com/api/v3/depth?symbol=${{ matrix.symbol }}&limit=500" \
-            | jq . > snapshots/spot/${{ matrix.symbol }}/$(date -I).json
+            | jq . > snapshots/spot/${{ matrix.symbol }}/$DATE.json
 
-      - name: Commit & Push Snapshots
+      - name: 📦 Upload snapshot-artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: snapshot-${{ matrix.symbol }}
+          path: |
+            snapshots/futures/${{ matrix.symbol }}/$DATE.json
+            snapshots/spot/${{ matrix.symbol }}/$DATE.json
+
+  aggregate_and_push:
+    name: 📊 Aggregate & Commit All Snapshots
+    runs-on: ubuntu-latest
+    needs: capture_snapshots
+
+    steps:
+      - name: 🔄 Checkout fresh
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          persist-credentials: true
+
+      - name: 📥 Download all snapshot-artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./snapshots-artifacts
+
+      - name: 🔀 Merge snapshots into repo
+        run: |
+          find snapshots-artifacts -type f -name '*.json' | while read src; do
+            rel=${src#snapshots-artifacts/}
+            dst=snapshots/$rel
+            mkdir -p "$(dirname "$dst")"
+            mv "$src" "$dst"
+          done
+
+      - name: 🚀 Commit & Push all Snapshots
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git reset --mixed origin/main
           git add snapshots
-          git commit -m "chore(snapshots): add liquidity ${{ matrix.symbol }} @ $(date -I) [skip ci]" || echo "No changes"
-          git push
+          if ! git diff --cached --quiet; then
+            git commit -m "chore(snapshots): add daily liquidity [skip ci]"
+            git push origin HEAD:main
+          else
+            echo "✅ No new snapshots to commit"
+          fi
