--- a/.github/workflows/liquidity_snapshot.yml
+++ b/.github/workflows/liquidity_snapshot.yml
@@ -1,5 +1,54 @@
 # .github/workflows/liquidity_snapshot.yml
-# … (der Teil bis capture_snapshots bleibt unverändert) …
+
+name: 💧 Full Liquidity Snapshot & Push
+
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'  # 00:00 UTC daily
+
+jobs:
+  capture_snapshots:
+    name: 🔄 Capture Liquidity Snapshots for ${{ matrix.symbol }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
+      max-parallel: 6
+
+    env:
+      PROXY_URL: ${{ secrets.RAILWAY_PROXY_URL }}
+
+    steps:
+      - name: 🛎️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: 🔧 Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: 💽 Capture Futures Depth via Proxy
+        run: |
+          DATE=$(date -I)
+          mkdir -p snapshots/futures/${{ matrix.symbol }}
+          curl -sSf -G "${PROXY_URL}/proxy" \
+            --data-urlencode "url=https://fapi.binance.com/fapi/v1/depth?symbol=${{ matrix.symbol }}&limit=500" \
+            | jq . > snapshots/futures/${{ matrix.symbol }}/$DATE.json
+
+      - name: 💾 Capture Spot Depth via Proxy
+        run: |
+          DATE=$(date -I)
+          mkdir -p snapshots/spot/${{ matrix.symbol }}
+          curl -sSf -G "${PROXY_URL}/proxy" \
+            --data-urlencode "url=https://api.binance.com/api/v3/depth?symbol=${{ matrix.symbol }}&limit=500" \
+            | jq . > snapshots/spot/${{ matrix.symbol }}/$DATE.json
+
+      - name: 📦 Upload snapshot-artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: snapshot-${{ matrix.symbol }}
+          path: |
+            snapshots/futures/${{ matrix.symbol }}/$DATE.json
+            snapshots/spot/${{ matrix.symbol }}/$DATE.json
 
   aggregate_and_push:
     name: 📊 Aggregate & Commit All Snapshots
@@ -21,10 +70,8 @@
       - name: 🔀 Merge snapshots into repo
         shell: bash
         run: |
-          # Verzeichnisse sicher anlegen (verhindert 'No such file or directory')
+          # Ensure directories exist
           mkdir -p snapshots snapshots-artifacts
-
-          # Aktivieren von **-Globbing, um rekursiv zu suchen
           shopt -s globstar
 
           MOVED=0
