--- a/.github/workflows/download_futures_vision_data.yml
+++ b/.github/workflows/download_futures_vision_data.yml
@@ -1,6 +1,6 @@
-# .github/workflows/download_futures_vision_data.yml
+# .github/workflows/download_futures_data_no_bookDepth.yml
 
-name: 📥 Download & Commit Historical Futures Data
+name: 📥 Download & Commit Futures Data (ohne bookDepth)
 
 on:
   workflow_dispatch:
@@ -11,16 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        category: [bookDepth, aggTrades, bookTicker, indexPriceKlines, metrics]
+        category: [aggTrades, bookTicker, indexPriceKlines, metrics]
         symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
-      max-parallel: 10
+      max-parallel: 8
 
     steps:
       - name: 🛎️ Checkout repo
         uses: actions/checkout@v3
 
-      - name: 🔧 Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip curl
+      - name: 🔧 Install tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip curl
 
       - name: 📥 Download & Unpack ${{ matrix.category }} for ${{ matrix.symbol }}
         shell: bash
@@ -95,6 +97,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "✅ No new data to commit"
           else
-            git commit -m "chore(data): import binance vision historical futures data [skip ci]"
+            git commit -m "chore(data): import futures vision data (ohne bookDepth) [skip ci]"
             git push origin HEAD:main
           fi
